fix: fix jump page film buttons

--- a/resources/assets/sass/_film-details.scss
+++ b/resources/assets/sass/_film-details.scss
@@ -84,6 +84,9 @@
   padding: 10px 14px 10px 30px;
   font-size: 1.25em;
   text-shadow: 1px 1px 2px #060725;
+  button {
+
+  }
   .film-view-info, .film-pocket-info {
     i:first-of-type {
       width: 95px;
